added styles to section 3and4

--- a/students/hridina_anastasiia/09_selectors/index.html
+++ b/students/hridina_anastasiia/09_selectors/index.html
@@ -49,13 +49,15 @@
         <section class="section">
             <div id="aboutme" class="aboutme">
                 <h2>About me</h2>
-                <p>Hi, I'm Denis – UX/UI designer from Minsk.
-                    I'm interested in design and everything connected with it.</p>
+                <p><span>Hi, I'm Denis – UX/UI designer from Minsk.</span>
+                    <span>I'm interested in design and everything connected with it.</span>
+                </p>
 
-                <p>I'm studying at courses "Web and mobile design
-                    interfaces" in IT-Academy.</p>
+                <p><span>I'm studying at courses "Web and mobile design</span>
+                    <span>interfaces" in IT-Academy.</span>
+                </p>
 
-                <p>Ready to implement excellent projects with wonderful people.</p>
+                <p><span>Ready to implement excellent projects <span>with wonderful people.</span></span></p>
             </div>
         </section>
         <section class="skill-set">
@@ -66,7 +68,7 @@
             <div class="figures">
                 <div class="figure-one">
                     <figure><img src="./images/photoshop.svg" width="89" height="87" alt="Adobe Photoshop">
-                        <figcaption>Adobe Photoshop</figcaption>
+                        <figcaption>Adobe <br> Photoshop</figcaption>
                     </figure>
                     <img src="./images/star.svg" alt="Star">
                     <img src="./images/star.svg" alt="Star">
@@ -76,7 +78,7 @@
                 </div>
                 <div class="figure-two">
                     <figure><img src="./images/illustrator.svg" width="89" height="87" alt="Adobe Illustrator">
-                        <figcaption>Adobe Illustrator</figcaption>
+                        <figcaption>Adobe <br> Illustrator</figcaption>
                     </figure>
                     <img src="./images/star.svg" alt="Star">
                     <img src="./images/star.svg" alt="Star">
@@ -86,7 +88,7 @@
                 </div>
                 <div class="figure-three">
                     <figure><img src="./images/after_effects.svg" width="89" height="87" alt="Adobe After Effects">
-                        <figcaption>Adobe After Effects</figcaption>
+                        <figcaption>Adobe <br> After Effects</figcaption>
                     </figure>
                     <img src="./images/star.svg" alt="Star">
                     <img src="./images/star.svg" alt="Star">
@@ -96,7 +98,7 @@
                 </div>
                 <div class="figure-four">
                     <figure><img src="./images/figma.svg" width="58" height="88" alt="Figma">
-                        <figcaption>Figma</figcaption>
+                        <figcaption>Figma</figcaption> <br>
                     </figure>
                     <img src="./images/star.svg" alt="Star">
                     <img src="./images/star.svg" alt="Star">
@@ -116,7 +118,7 @@
                 <img src="./images/jpeg_reebok_web.jpg" width="936" height="522" alt="Reebok store">
                 <a href="#">Reebok Store - Concept</a>
             </div>
-            <div class="braun-web">
+            <div class="braun-web-store">
                 <img src="./images/jpeg_braun_web.jpg" width="936" height="522" alt="Braun portable macro camera">
                 <a href="#">Braun Landing Page - Concept</a>
             </div>
@@ -124,9 +126,10 @@
         <footer class="footer">
             <div id="contacts" class="contacts-text">
                 <h2>Contacts</h2>
-                <p>Want to know more or just chat?
-                    You are welcome!</p>
-                <button type="button">Send message</button>
+                <p><span>Want to know more or just chat?</span>
+                    <span>You are welcome!</span>
+                </p>
+                <a href="#" class="button">Send message</a>
             </div>
             <div class="footer-links">
                 <a href="#"><img src="./images/linkedin.svg" alt="LinkedIn"></a>
@@ -136,9 +139,9 @@
             </div>
             <div class="footer-text">
                 <p>
-                    Like me on
-                    LinkedIn, Instagram, Behance,
-                    Dribble
+                    <span>Like me on</span>
+                    <span>LinkedIn, Instagram, Behance, </span>
+                    <span>Dribble</span>
                 </p>
             </div>
         </footer>
