--- a/students/hridina_anastasiia/07_figma/index.html
+++ b/students/hridina_anastasiia/07_figma/index.html
@@ -11,7 +11,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html#">Home</a></li>
+                <li><a href="#">Home</a></li>
                 <li><a href="#about me">About me</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -28,7 +28,7 @@
             </div>
         </section>
         <section>
-            <div id="about me">
+            <div id="aboutme">
                 <h2>About me</h2>
                 <p>Hi, I'm Denis – UX/UI designer from Minsk.
                     I'm interested in design and everything connected with it.
