change img links

--- a/students/tiselko_iryna/08_css/index.html
+++ b/students/tiselko_iryna/08_css/index.html
@@ -21,7 +21,7 @@
     <main>
         <section id="home">
             <h1 style="font-size: 47px; font-weight: 700;">Denis Novik</h1>
-            <img src="/students/tiselko_iryna/08_css/images/main/main.jpg" alt="Denis Novik" width="943px" height="387px">
+            <img src="./images/main/main.jpg" alt="Denis Novik" width="943px" height="387px">
         </section>
 
         <section id="about" style="background-color: #F6F6F6;">
@@ -39,50 +39,50 @@
             <div class="skills_container">
                 <div>
                     <figure>
-                        <img src="/students/tiselko_iryna/08_css/images/skills/ps.svg" alt="PS" width="89px" height="88px">
+                        <img src="./images/skills/ps.svg" alt="PS" width="89px" height="88px">
                         <figcaption style="font-size: 14px; color: #828282;">Adobe<br>Photoshop</figcaption>
                     </figure>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
                 </div>
 
                 <div>
                     <figure>
-                        <img src="/students/tiselko_iryna/08_css/images/skills/ai.svg" alt="Ai" width="89px" height="88px">
+                        <img src="./images/skills/ai.svg" alt="Ai" width="89px" height="88px">
                         <figcaption style="font-size: 14px; color: #828282;">Adobe<br>Illustrator</figcaption>
                     </figure>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
                 </div>
 
                 <div>
                     <figure>
-                        <img src="/students/tiselko_iryna/08_css/images/skills/aae.svg" alt="AAE" width="89px" height="88px">
+                        <img src="./images/skills/aae.svg" alt="AAE" width="89px" height="88px">
                         <figcaption style="font-size: 14px; color: #828282;">Adobe<br>After Effects</figcaption>
                     </figure>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
                 </div>
 
                 <div>
                     <figure>
-                        <img src="/students/tiselko_iryna/08_css/images/skills/figma.svg" alt="Figma" width="89px" height="88px">
+                        <img src="./images/skills/figma.svg" alt="Figma" width="89px" height="88px">
                         <figcaption style="font-size: 14px; color: #828282;">Figma</figcaption>
                     </figure>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star.svg" alt="" width="26px" height="26px"></span>
-                    <span><img src="/students/tiselko_iryna/08_css/images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star.svg" alt="" width="26px" height="26px"></span>
+                    <span><img src="./images/skills/star_empt.svg" alt="" width="26px" height="26px"></span>
                 </div>
             </div>
         </section>
@@ -90,17 +90,17 @@
         <section id="portfolio" style="background-color: #F6F6F6;">
             <h2 style="font-size: 34px; font-weight: 700;">Portfolio</h2>
             <figure>
-                <a href="#" target="_blank"><img src="/students/tiselko_iryna/08_css/images/portfolio/1st_prjt.jpg" alt="Online fashion store"></a>
+                <a href="#" target="_blank"><img src="./images/portfolio/1st_prjt.jpg" alt="Online fashion store"></a>
                 <figcaption class="portfolio_text" style="text-decoration: underline;">Online fashion store -<br>Homepage</figcaption>
             </figure>
 
             <figure>
-                <a href="#" target="_blank"><img src="/students/tiselko_iryna/08_css/images/portfolio/2nd_prjt.jpg" alt="Reebok Store"></a>
+                <a href="#" target="_blank"><img src="./images/portfolio/2nd_prjt.jpg" alt="Reebok Store"></a>
                 <figcaption class="portfolio_text" style="text-decoration: underline;">Reebok Store - Concept</figcaption>
             </figure>
 
             <figure>
-                <a href="#" target="_blank"><img src="/students/tiselko_iryna/08_css/images/portfolio/3rd_prjt.jpg" alt="Braun Landing Page"></a>
+                <a href="#" target="_blank"><img src="./images/portfolio/3rd_prjt.jpg" alt="Braun Landing Page"></a>
                 <figcaption class="portfolio_text" style="text-decoration: underline;">Braun Landing Page - Concept</figcaption>
             </figure>
         </section>
@@ -111,10 +111,10 @@
         <p>Want to know more or just chat?<br>You are welcome!</p>
         <button style="width: 180px; height: 42px; background-color: #070707; border-radius: 100px;"><span style="font-weight: 700; color: #FFFFFF;">Send message</span></button>
         <div>
-            <a href="https://www.linkedin.com/" target="_blank"><img src="/students/tiselko_iryna/08_css/images/contacts/linkedin.svg" alt="linkedin" style="width: 40px; height: 40px;"></a>
-            <a href="https://www.instagram.com/" target="_blank"><img src="/students/tiselko_iryna/08_css/images/contacts/instagram.svg" alt="instagram" style="width: 40px; height: 40px;"></a>
-            <a href="https://www.behance.net/" target="_blank"><img src="/students/tiselko_iryna/08_css/images/contacts/behance.svg" alt="behance" style="width: 40px; height: 40px;"></a>
-            <a href="https://dribbble.com/" target="_blank"><img src="/students/tiselko_iryna/08_css/images/contacts/dribble.svg" alt="dribble" style="width: 40px; height: 40px;"></a>
+            <a href="https://www.linkedin.com/" target="_blank"><img src="./images/contacts/linkedin.svg" alt="linkedin" style="width: 40px; height: 40px;"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="./images/contacts/instagram.svg" alt="instagram" style="width: 40px; height: 40px;"></a>
+            <a href="https://www.behance.net/" target="_blank"><img src="./images/contacts/behance.svg" alt="behance" style="width: 40px; height: 40px;"></a>
+            <a href="https://dribbble.com/" target="_blank"><img src="./images/contacts/dribble.svg" alt="dribble" style="width: 40px; height: 40px;"></a>
         </div>
         <p style="font-size: 14px; color: #828282;">Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
