--- a/students/havrylova_kateryna/09_selectors/index.html
+++ b/students/havrylova_kateryna/09_selectors/index.html
@@ -5,9 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
@@ -32,31 +29,37 @@
                 </li>
             </ul>
         </nav>
-        <hr>
+
     </header>
 
     <main>
         <section class="hero_block">
-            <h1 class="hero__title">Denis Novik</h1>
-            <img src="./images/jpeg-optimizer_hero.jpg" alt="">
+            <hr class="line">
+            <div class="img-box">
+                <h1 class="hero__title">Denis Novik</h1>
+                <img class="img-main" src="./images/jpeg-optimizer_hero.jpg" alt="">
+            </div>
         </section>
 
         <section class="about">
-            <div>
+            <div class="text-box">
                 <h2 class="titles" id="about_me">About me</h2>
-                <p>Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and everything connected with it.
+                <p class="text-wight">Hi, I'm Denis – UX/UI designer from Minsk. <br>I'm interested in design and
+                    everything
+                    connected with it.
                 </p>
-                <p>I'm studying at courses "Web and mobile design interfaces" in IT-Academy. </p>
-                <p>Ready to implement excellent projects with wonderful people.</p>
+                <p class="text-wight">I'm studying at courses "Web and mobile design <br> interfaces" in IT-Academy.
+                </p>
+                <p class="text-wight">Ready to implement excellent projects <br> with wonderful people.</p>
             </div>
         </section>
 
         <section class="skills">
-            <div>
+            <div class="hero_block">
                 <h2 class="titles" id="skills">Skills</h2>
                 <p>I work in such programs as</p>
-                <ul>
-                    <li>
+                <ul class="list">
+                    <li class="list__item">
                         <img src="./images/ps.svg" alt="">
                         <p class="skills_name">Adobe Photoshop</p>
                         <p><img src="./images/star_black.svg" alt="">
@@ -66,7 +69,7 @@
                             <img src="./images/star_empty.svg" alt="">
                         </p>
                     </li>
-                    <li>
+                    <li class="list__item">
                         <img src="./images/ai.svg" alt="">
                         <p class="skills_name">Adobe Illustrator</p>
                         <p><img src="./images/star_black.svg" alt="">
@@ -76,7 +79,7 @@
                             <img src="./images/star_empty.svg" alt="">
                         </p>
                     </li>
-                    <li>
+                    <li class="list__item">
                         <img src="./images/ae.svg" alt="">
                         <p class="skills_name">Adobe After Effects</p>
                         <p>
@@ -87,7 +90,7 @@
                             <img src="./images/star_empty.svg" alt="">
                         </p>
                     </li>
-                    <li>
+                    <li class="list__item">
                         <img src="./images/figma.svg" alt="">
                         <p class="skills_name">Figma</p>
                         <p>
@@ -132,7 +135,7 @@
             <button class="button">
                 Send message
             </button>
-            <ul>
+            <ul class="list">
                 <li>
                     <img src="./images/in.svg" alt="">
                 </li>
