--- a/students/umienchuk_oksana/08_css/index.html
+++ b/students/umienchuk_oksana/08_css/index.html
@@ -10,10 +10,11 @@
 <body style="font-size: 18px; 
 font-family: Open Sans, Arial, Helvetica, sans-serif; 
 font-weight: 400; 
-color: #070707;">
+color: #070707;
+text-align: center;">
     <header>
         <nav>
-            <ul style="list-style-type: none; display: flex; gap: 40px;">
+            <ul style="list-style-type: none;">
                 <li><a style="color: #828282; text-decoration: none;" href="#">Home</a></li>
                 <li><a style="color: #828282; text-decoration: none;" href="#About_me">About me</a></li>
                 <li><a style="color: #828282; text-decoration: none;" href="#Skills">Skills</a></li>
@@ -26,11 +27,11 @@ color: #070707;">
 
     <main>
         <!-- Hero -->
-        <h1 style="font-size: 48px; font-weight: 700; text-align: center;">Denis Novik</h1>
+        <h1 style="font-size: 48px; font-weight: 700; ">Denis Novik</h1>
         <img src="./images/banner.jpg" alt="Banner with man" width="944">
 
         <!-- Main block About me -->
-        <section style="text-align: center;">
+        <section>
             <h2 style="font-size: 34px; font-weight: 700;" id="About_me">About me</h2>
             <div>
                 <p>
@@ -49,7 +50,7 @@ color: #070707;">
         </section>
 
         <!-- Main block Skills -->
-        <section style="text-align: center;">
+        <section>
             <h2 style="font-size: 34px; font-weight: 700;" id="Skills">Skills</h2>
             <p>I work in such programs as</p>
 
@@ -58,7 +59,7 @@ color: #070707;">
                 <section>
                     <img src="./images/adobe-photoshop.svg" alt="Adobe Photoshop">
                     <p style="color: #828282;">Adobe Photoshop</p>
-                    <ul style="list-style-type: none; display: flex; gap: 10px;">
+                    <ul style="list-style-type: none;">
                         <li>
                             <img src="./images/star.svg" alt="First star">
                         </li>
@@ -81,7 +82,7 @@ color: #070707;">
                 <section>
                     <img src="./images/adobe-illustrator.svg" alt="Adobe Illustrator">
                     <p style="color: #828282;">Adobe Illustrator</p>
-                    <ul style="list-style-type: none; display: flex; gap: 10px;">
+                    <ul style="list-style-type: none;">
                         <li>
                             <img src="./images/star.svg" alt="First star">
                         </li>
@@ -104,7 +105,7 @@ color: #070707;">
                 <section>
                     <img src="./images/adobe-after-effects.svg" alt="Adobe After Effects">
                     <p style="color: #828282;">Adobe After Effects</p>
-                    <ul style="list-style-type: none; display: flex; gap: 10px;">
+                    <ul style="list-style-type: none;">
                         <li>
                             <img src="./images/star.svg" alt="First star">
                         </li>
@@ -127,7 +128,7 @@ color: #070707;">
                 <section>
                     <img src="./images/figma.svg" alt="Figma">
                     <p style="color: #828282;">Figma</p>
-                    <ul style="list-style-type: none; display: flex; gap: 10px;">
+                    <ul style="list-style-type: none;">
                         <li>
                             <img src="./images/star.svg" alt="First star">
                         </li>
@@ -149,7 +150,7 @@ color: #070707;">
         </section>
 
         <!-- Main block Portfolio -->
-        <section style="text-align: center;">
+        <section>
             <h2 style="font-size: 34px; font-weight: 700;" id="Portfolio">Portfolio</h2>
 
             <!--  Portfolio about Online fashion store -->
@@ -181,7 +182,7 @@ color: #070707;">
     </main>
 
     <!-- Footer -->
-    <footer style="text-align: center;">
+    <footer>
         <h2 style="font-size: 34px; font-weight: 700;" id="Contacts">Contacts</h2>
         <p>
             Want to know more or just chat? <br>
@@ -190,7 +191,7 @@ color: #070707;">
         <button style="letter-spacing: 1.8px; font-weight: 700;" type="button">Send message</button>
 
         <!-- Social network -->
-        <ul style="list-style-type: none; display: flex; gap: 50px;">
+        <ul style="list-style-type: none;">
             <li>
                 <a target="_blank" href="#"><img src="./images/logo-in.svg" alt="Logo linkedin"></a>
             </li>
