added last changes

--- a/students/havrylova_kateryna/09_selectors/index.html
+++ b/students/havrylova_kateryna/09_selectors/index.html
@@ -41,7 +41,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="bcgr-grey">
             <div class="text-box">
                 <h2 class="titles" id="about_me">About me</h2>
                 <p class="text-wight">Hi, I'm Denis – UX/UI designer from Minsk. <br>I'm interested in design and
@@ -55,13 +55,13 @@
         </section>
 
         <section class="skills">
-            <div class="hero_block">
+            <div class="hero_block pt100">
                 <h2 class="titles" id="skills">Skills</h2>
                 <p>I work in such programs as</p>
                 <ul class="list">
                     <li class="list__item">
                         <img src="./images/ps.svg" alt="">
-                        <p class="skills_name">Adobe Photoshop</p>
+                        <p class="skills_name">Adobe <br>Photoshop</p>
                         <p><img src="./images/star_black.svg" alt="">
                             <img src="./images/star_black.svg" alt="">
                             <img src="./images/star_black.svg" alt="">
@@ -71,7 +71,7 @@
                     </li>
                     <li class="list__item">
                         <img src="./images/ai.svg" alt="">
-                        <p class="skills_name">Adobe Illustrator</p>
+                        <p class="skills_name">Adobe <br>Illustrator</p>
                         <p><img src="./images/star_black.svg" alt="">
                             <img src="./images/star_black.svg" alt="">
                             <img src="./images/star_black.svg" alt="">
@@ -81,7 +81,7 @@
                     </li>
                     <li class="list__item">
                         <img src="./images/ae.svg" alt="">
-                        <p class="skills_name">Adobe After Effects</p>
+                        <p class="skills_name">Adobe <br>After Effects</p>
                         <p>
                             <img src="./images/star_black.svg" alt="">
                             <img src="./images/star_black.svg" alt="">
@@ -92,7 +92,7 @@
                     </li>
                     <li class="list__item">
                         <img src="./images/figma.svg" alt="">
-                        <p class="skills_name">Figma</p>
+                        <p class="skills_name"> <br>Figma </p>
                         <p>
                             <img src="./images/star_black.svg" alt="">
                             <img src="./images/star_black.svg" alt="">
@@ -105,51 +105,51 @@
             </div>
         </section>
 
-        <section class="portfolio">
-            <h2 class="titles" id="portfolio">Portfolio</h2>
-            <div>
+        <section class="portfolio bcgr-grey mb100">
+            <h2 class="titles pt100 pb67" id="portfolio">Portfolio</h2>
+            <div class="mb100">
                 <img src="./images/jpeg-optimizer_woman.jpg" alt="">
                 <p>
-                    <a href="#" target="_blank">Online fashion store - Homepage</a>
+                    <a class="link" href="#" target="_blank">Online fashion store - <br>Homepage</a>
                 </p>
             </div>
-            <div>
+            <div class="mb100">
                 <img src="./images/jpeg-optimizer_reebok_web.jpg" alt="">
                 <p>
-                    <a href="#" target="_blank">Reebok Store - Concept</a>
+                    <a class="link" href="#" target="_blank">Reebok Store - Concept</a>
                 </p>
             </div>
-            <div>
+            <div class="pb100">
                 <img src="./images/jpeg-optimizer_camera.jpg" alt="">
                 <p>
-                    <a href="#" target="_blank">Braun Landing Page - Concept</a>
+                    <a class="link" href="#" target="_blank">Braun Landing Page - Concept</a>
                 </p>
             </div>
         </section>
 
     </main>
-    <footer>
-        <div>
+    <footer class="null-border">
+        <div class="contacts">
             <h2 class="titles" id="contacts">Contacts</h2>
-            <p>Want to know more or just chat? You are welcome!</p>
+            <p class="pb67">Want to know more or just chat? <br>You are welcome!</p>
             <button class="button">
                 Send message
             </button>
-            <ul class="list">
-                <li>
+            <ul class="list w480">
+                <li class="list__item">
                     <img src="./images/in.svg" alt="">
                 </li>
-                <li>
+                <li class="list__item">
                     <img src="./images/surface6.svg" alt="">
                 </li>
-                <li>
+                <li class="list__item">
                     <img src="./images/behance.svg" alt="">
                 </li>
-                <li>
+                <li class="list__item">
                     <img src="./images/surface7.svg" alt="">
                 </li>
             </ul>
-            <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
+            <p class="w480 pb100 pt44">Like me <br>on LinkedIn, Instagram, Behance, <br>Dribble</p>
         </div>
     </footer>
 
