--- a/students/motkaliuk_andrii/07_figma/index.html
+++ b/students/motkaliuk_andrii/07_figma/index.html
@@ -1,142 +1,144 @@
 <!DOCTYPE html>
-<html lang="uk">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<html lang="be">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Denis Novik</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <header>
-      <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#about">About me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="#contacts">Contacts</a></li>
-      </ul>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#about">About me</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#contacts">Contacts</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <hr />
+    <hr>
 
     <section>
-      <h1>Denis Novik</h1>
-      <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik" />
+        <h1>Denis Novik</h1>
+        <img src="./ras_images/hero.jpg" width="944" height="387" alt="Denis Novik">
     </section>
 
-    <section>
-      <h2 id="about">About me</h2>
-      <p>
-        Hi, I'm Denis – UX/UI designer from Minsk.<br />
-        I'm interested in design and everything connected with it.
-      </p>
-      <p>
-        I'm studying at courses "Web and mobile design<br />
-        interfaces" in IT-Academy.
-      </p>
-      <p>
-        Ready to implement excellent projects<br />
-        with wonderful people.
-      </p>
-    </section>
-
-    <section>
-      <h2 id="skills">Skills</h2>
-      <p>I work in such programs as</p>
-      <div>
-        <img src="./vec_images/ps.svg" width="89" height="88" alt="Adobe Photoshop" />
-        <p>Adobe<br />Photoshop</p>
-        <div>
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star" />
-        </div>
-      </div>
-      <div>
-        <img src="./vec_images/ai.svg" width="89" height="88" alt="Adobe Illustrator" />
-        <p>Adobe<br />Illustrator</p>
-        <div>
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star" />
-          <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star" />
-        </div>
-      </div>
-      <div>
-        <img src="./vec_images/ae.svg" width="89" height="88" alt="Adobe After Effects" />
-        <p>Adobe<br />After Effects</p>
-        <div>
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star" />
-        </div>
-      </div>
-      <div>
-        <img src="./vec_images/figma.svg" width="58" height="88" alt="Figma" />
-        <p>Figma</p>
-        <div>
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star" />
-          <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star" />
-        </div>
-      </div>
-    </section>
-
-    <section>
-      <h2 id="portfolio">Portfolio</h2>
-      <div>
-        <img src="./ras_images/woman.png" width="936" height="510" alt="Online fashion store - Homepage" />
+    <main>
+        <h2 id="about">About me</h2>
         <p>
-          <a href="#" target="_blank">Online fashion store -<br />Homepage</a>
+            Hi, I'm Denis – UX/UI designer from Minsk.<br>
+            I'm interested in design and everything connected with it.
         </p>
-      </div>
-
-      <div>
-        <img src="./ras_images/reebok.png" width="936" height="522" alt="Reebok Store - Concep" />
         <p>
-          <a href="#" target="_blank">Reebok Store - Concept</a>
+            I'm studying at courses "Web and mobile design<br>
+            interfaces" in IT-Academy.
         </p>
-      </div>
-
-      <div>
-        <img src="./ras_images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept" />
         <p>
-          <a href="#" target="_blank">Braun Landing Page - Concept</a>
+            Ready to implement excellent projects<br>
+            with wonderful people.
         </p>
-      </div>
+    </main>
+
+    <section>
+        <h2 id="skills">Skills</h2>
+        <p>I work in such programs as</p>
+        <div>
+            <img src="./vec_images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
+            <p>Adobe<br>Photoshop</p>
+            <div>
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+            </div>
+        </div>
+        <div>
+            <img src="./vec_images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
+            <p>Adobe<br>Illustrator</p>
+            <div>
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+            </div>
+        </div>
+        <div>
+            <img src="./vec_images/ae.svg" width="89" height="88" alt="Adobe After Effects">
+            <p>Adobe<br>After Effects</p>
+            <div>
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+            </div>
+        </div>
+        <div>
+            <img src="./vec_images/figma.svg" width="58" height="88" alt="Figma">
+            <p>Figma</p>
+            <div>
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_full.svg" width="26" height="26" alt="full star">
+                <img src="./vec_images/Star_empty.svg" width="26" height="26" alt="empty star">
+            </div>
+        </div>
     </section>
 
     <section>
-      <h2 id="contacts">Contacts</h2>
-      <p>Want to know more or just chat?<br />You are welcome!</p>
-      <button name="button">Send message</button>
-      <div>
-        <ul>
-          <li>
-            <a href="#"><img src="./vec_images/link.svg" width="40" height="40" alt="linkedin" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./vec_images/insta.svg" width="40" height="40" alt="instagram" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./vec_images/behance.svg" width="40" height="40" alt="behence" /></a>
-          </li>
-          <li>
-            <a href="#"><img src="./vec_images/surface.svg" width="40" height="40" alt="linkedin" /></a>
-          </li>
-        </ul>
-      </div>
+        <h2 id="portfolio">Portfolio</h2>
+        <div>
+            <img src="./ras_images/woman.png" width="936" height="510" alt="Online fashion store - Homepage">
+            <p>
+                <a href="#" target="_blank">Online fashion store -<br>Homepage</a>
+            </p>
+        </div>
+
+        <div>
+            <img src="./ras_images/reebok.png" width="936" height="522" alt="Reebok Store - Concep">
+            <p>
+                <a href="#" target="_blank">Reebok Store - Concept</a>
+            </p>
+        </div>
+
+        <div>
+            <img src="./ras_images/cam.png" width="936" height="522" alt="Braun Landing Page - Concept">
+            <p>
+                <a href="#" target="_blank">Braun Landing Page - Concept</a>
+            </p>
+        </div>
     </section>
 
     <footer>
-      <p>Like me on<br />LinkedIn, Instagram, Behance,<br />Dribble</p>
+        <h2 id="contacts">Contacts</h2>
+        <p>Want to know more or just chat?<br>You are welcome!</p>
+        <button name="button">Send message</button>
+        <div>
+            <ul>
+                <li>
+                    <a href="#"><img src="./vec_images/link.svg" width="40" height="40" alt="linkedin"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./vec_images/insta.svg" width="40" height="40" alt="instagram"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./vec_images/behance.svg" width="40" height="40" alt="behence"></a>
+                </li>
+                <li>
+                    <a href="#"><img src="./vec_images/surface.svg" width="40" height="40" alt="linkedin"></a>
+                </li>
+            </ul>
+        </div>
+        <p>Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
-  </body>
+</body>
+
 </html>
