--- a/students/motkaliuk_andrii/08_css_welcome/index.html
+++ b/students/motkaliuk_andrii/08_css_welcome/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="uk">
+<html lang="be">
 
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
     <title>Denis Novik</title>
     <style>
         p {
-            color: var(--black, #070707);
+            color: #070707;
             text-align: center;
             font-size: 18px;
             font-family: Open Sans, Arial, Helvetica, sans-serif;
@@ -16,14 +16,14 @@
         }
 
         h1 {
-            color: var(--black, #070707);
+            color: #070707;
             font-size: 47.339px;
             font-family: Open Sans, Arial, Helvetica, sans-serif;
             font-weight: 700;
         }
 
         h2 {
-            color: var(--black, #070707);
+            color: #070707;
             text-align: center;
             font-size: 34px;
             font-family: Open Sans, Arial, Helvetica, sans-serif;
@@ -171,7 +171,7 @@
         </div>
     </section>
 
-    <section>
+    <footer>
         <h2 id="contacts">Contacts</h2>
         <p>Want to know more or just chat?<br>You are welcome!</p>
         <button name="button" class="button">Send message</button>
@@ -191,9 +191,6 @@
                 </li>
             </ul>
         </div>
-    </section>
-
-    <footer>
         <p
             style="color: #828282; text-align: center; font-size: 14px; font-family: Open Sans, Arial, Helvetica, sans-serif; font-weight: 400;">
             Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
