--- a/students/motkaliuk_andrii/09_css_selectors/index.html
+++ b/students/motkaliuk_andrii/09_css_selectors/index.html
@@ -58,49 +58,44 @@
             <img src="./images/ps.svg" width="89" height="88" alt="Adobe Photoshop">
             <p class="skills_signature">Adobe<br>Photoshop</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star"
-                    style="display: inline-block; margin-right: 9px">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star"
-                    style="display: inline-block">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
             </div>
         </div>
         <div>
             <img src="./images/ai.svg" width="89" height="88" alt="Adobe Illustrator">
             <p class="skills_signature">Adobe<br>Illustrator</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
             </div>
         </div>
         <div>
             <img src="./images/ae.svg" width="89" height="88" alt="Adobe After Effects">
             <p class="skills_signature">Adobe<br>After Effects</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
             </div>
         </div>
         <div>
             <img src="./images/figma.svg" width="58" height="88" alt="Figma">
             <p class="skills_signature">Figma</p>
             <div>
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_full.svg" width="26" height="26" alt="full star">
-                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_full.svg" width="26" height="26" alt="full star" class="stars">
+                <img src="./images/Star_empty.svg" width="26" height="26" alt="empty star" class="last_star">
             </div>
         </div>
     </section>
@@ -129,7 +124,7 @@
         </div>
     </section>
 
-    <section>
+    <footer>
         <h2 id="contacts">Contacts</h2>
         <p>Want to know more or just chat?<br>You are welcome!</p>
         <button name="button" class="button">Send message</button>
@@ -149,9 +144,6 @@
                 </li>
             </ul>
         </div>
-    </section>
-
-    <footer>
         <p>Like me on<br>LinkedIn, Instagram, Behance,<br>Dribble</p>
     </footer>
 </body>
