--- a/students/hridina_anastasiia/10_boxmodel/denis_novik/index.html
+++ b/students/hridina_anastasiia/10_boxmodel/denis_novik/index.html
@@ -4,11 +4,150 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Denis Novik</title>
+    <link rel="stylesheet" href="style.css">
+    <style>
+        body {
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+            font-size: 18px;
+            line-height: normal;
+            letter-spacing: .5px;
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
+    <header class="header">
+        <nav class="nav">
+            <ul class="menu">
+                <li class="menu__item">
+                    <a href="#" class="menu__link">Home</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#about me" class="menu__link">About me</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#skills" class="menu__link">Skills</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#portfolio" class="menu__link">Portfolio</a>
+                </li>
+                <li class="menu__item">
+                    <a href="#contacts" class="menu__link">Contacts</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
+    <main>
+        <section>
+            <div class="container">
+                <h1 class="heading">Denis Novik</h1>
+                <img src="./images/denis_novik_photo.jpg" width="943" height="387" alt="Denis Novik">
+            </div>
+        </section>
+        <section class="section">
+            <div id="aboutme" class="aboutme">
+                <h2>About me</h2>
+                <p><span>Hi, I'm Denis – UX/UI designer from Minsk.</span>
+                    <span>I'm interested in design and everything connected with it.</span>
+                </p>
+                <br>
+                <p><span>I'm studying at courses "Web and mobile design</span>
+                    <span>interfaces" in IT-Academy.</span>
+                </p>
+                <br>
+                <p><span>Ready to implement excellent projects<span>with wonderful people.</span></span></p>
+            </div>
+        </section>
+        <section class="skill-set">
+            <div id="skills" class="skills">
+                <h2>Skills</h2>
+                <h3>I work in such programs as</h3>
+            </div>
+            <div class="figures">
+                <div class="figure-one">
+                    <figure><img src="./images/photoshop.svg" width="89" height="87" alt="Adobe Photoshop">
+                        <figcaption>Adobe <br> Photoshop</figcaption>
+                    </figure>
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star_empty.svg" alt="Star">
+                </div>
+                <div class="figure-two">
+                    <figure><img src="./images/illustrator.svg" width="89" height="87" alt="Adobe Illustrator">
+                        <figcaption>Adobe <br> Illustrator</figcaption>
+                    </figure>
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src=".//images/star.svg" alt="Star">
+                    <img src="./images/star_empty.svg" alt="Star">
+                    <img src=".//images/star_empty.svg" alt="Star">
+                </div>
+                <div class="figure-three">
+                    <figure><img src="./images/after_effects.svg" width="89" height="87" alt="Adobe After Effects">
+                        <figcaption>Adobe <br> After Effects</figcaption>
+                    </figure>
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src=".//images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star_empty.svg" alt="Star">
+                </div>
+                <div class="figure-four">
+                    <figure><img src=".//images/figma.svg" width="58" height="88" alt="Figma">
+                        <figcaption>Figma</figcaption> <br>
+                    </figure>
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star.svg" alt="Star">
+                    <img src="./images/star_empty.svg" alt="Star">
+                </div>
+            </div>
+        </section>
+        <section class="portfolio-list">
+            <div id="portfolio" class="fashion-store">
+                <h2>Portfolio</h2>
+                <img src=".//images/fashion_store.jpg" width="936" height="510" alt="Online fashion store"><br>
+                <a href="#">Online fashion store - Homepage</a>
+            </div>
+            <div class="reebok-store">
+                <img src="./images/jpeg_reebok_web.jpg" width="936" height="522" alt="Reebok store"><br>
+                <a href="#">Reebok Store - Concept</a>
+            </div>
+            <div class="braun-web-store">
+                <img src="./images/jpeg_braun_web.jpg" width="936" height="522" alt="Braun portable macro camera"><br>
+                <a href="#">Braun Landing Page - Concept</a>
+            </div>
+        </section>
+        <footer class="footer">
+            <div id="contacts" class="contacts-text">
+                <h2>Contacts</h2>
+                <p><span>Want to know more or just chat?</span>
+                    <span>You are welcome!</span>
+                </p>
+                <a href="#" class="button">Send message</a>
+            </div>
+            <div class="footer-links">
+                <a href="#"><img src="./images/linkedin.svg" alt="LinkedIn"></a>
+                <a href="#"><img src="./images/instagram.svg" alt="Instagram"></a>
+                <a href="#"><img src="./images/behance.svg" alt="Behance"></a>
+                <a href="#"><img src="./images/dribble.svg" alt="Dribble"></a>
+            </div>
+            <div class="footer-text">
+                <p>
+                    <span>Like me on</span>
+                    <span>LinkedIn, Instagram, Behance, </span>
+                    <span>Dribble</span>
+                </p>
+            </div>
+        </footer>
+
+    </main>
 </body>
 
 </html>
