added animation for nav and footer

--- a/students/kukuruza_maxim/09_css/index.html
+++ b/students/kukuruza_maxim/09_css/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../08_css/css/normalize.css">
-    <link rel="stylesheet" href="../08_css/css/style.css">
+    <link rel="stylesheet" href="../09_css/css/normalize.css">
+    <link rel="stylesheet" href="../09_css/css/style.css">
     <title>Document</title>
 </head>
 
@@ -13,11 +13,11 @@
     <header>
         <nav>
             <ul>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a class="" href="#">About me</a></li>
-                <li><a class="" href="#">Skills</a></li>
-                <li><a class="" href="#">Portfolio</a></li>
-                <li><a class="" href="#">Contacts</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About me</a></li>
+                <li><a href="#">Skills</a></li>
+                <li><a href="#">Portfolio</a></li>
+                <li><a href="#">Contacts</a></li>
             </ul>
         </nav>
     </header>
